--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,9 @@
       src="https://kit.fontawesome.com/7016843f62.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="text/javascript"
+      src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
+    ></script>
   </body>
 </html>
