--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Purely</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/img/icon-cube.png" />
   </head>
   <body class="font-primary">
     <app-root></app-root>
